--- a/Rock.Migrations/Rock.Migrations.csproj
+++ b/Rock.Migrations/Rock.Migrations.csproj
@@ -156,6 +156,10 @@
     <Compile Include="Migrations\201812111901295_Rollup_1211.Designer.cs">
       <DependentUpon>201812111901295_Rollup_1211.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201812131648039_GroupScheduling.cs" />
+    <Compile Include="Migrations\201812131648039_GroupScheduling.Designer.cs">
+      <DependentUpon>201812131648039_GroupScheduling.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\CreateDatabase\201311251734059_CreateDatabase.cs" />
     <Compile Include="Migrations\CreateDatabase\201311251734059_CreateDatabase.Designer.cs">
       <DependentUpon>201311251734059_CreateDatabase.cs</DependentUpon>
@@ -514,6 +518,9 @@
     <EmbeddedResource Include="Migrations\201812111901295_Rollup_1211.resx">
       <DependentUpon>201812111901295_Rollup_1211.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201812131648039_GroupScheduling.resx">
+      <DependentUpon>201812131648039_GroupScheduling.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Migrations\CreateDatabase\201311251734059_CreateDatabase.resx">
       <DependentUpon>201311251734059_CreateDatabase.cs</DependentUpon>
     </EmbeddedResource>
@@ -775,6 +782,7 @@
       <DependentUpon>201811271852316_Rollup_1127.cs</DependentUpon>
     </Content>
     <Content Include="Migrations\201812111901295_Rollup_1211_FixChartShortcode.sql" />
+    <Content Include="Migrations\201812131648039_GroupScheduling_PopulateScheduleTemplates.sql" />
     <Content Include="Migrations\CreateDatabase\201311251734059_CreateDatabase.sql">
       <DependentUpon>201311251734059_CreateDatabase.cs</DependentUpon>
     </Content>
