- more progress on Group Scheduling (Add Progress Stats, started Auto Scheduling)

--- a/Rock.Migrations/Rock.Migrations.csproj
+++ b/Rock.Migrations/Rock.Migrations.csproj
@@ -160,6 +160,10 @@
     <Compile Include="Migrations\201812131648039_GroupScheduling.Designer.cs">
       <DependentUpon>201812131648039_GroupScheduling.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201812150142513_GroupScheduling2.cs" />
+    <Compile Include="Migrations\201812150142513_GroupScheduling2.Designer.cs">
+      <DependentUpon>201812150142513_GroupScheduling2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\CreateDatabase\201311251734059_CreateDatabase.cs" />
     <Compile Include="Migrations\CreateDatabase\201311251734059_CreateDatabase.Designer.cs">
       <DependentUpon>201311251734059_CreateDatabase.cs</DependentUpon>
@@ -520,6 +524,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201812131648039_GroupScheduling.resx">
       <DependentUpon>201812131648039_GroupScheduling.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201812150142513_GroupScheduling2.resx">
+      <DependentUpon>201812150142513_GroupScheduling2.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\CreateDatabase\201311251734059_CreateDatabase.resx">
       <DependentUpon>201311251734059_CreateDatabase.cs</DependentUpon>
