- Added job for sending email based on pending attendance occurrences per person

--- a/Rock/Rock.csproj
+++ b/Rock/Rock.csproj
@@ -389,6 +389,7 @@
     <Compile Include="Field\FieldVisibilityRules.cs" />
     <Compile Include="Field\Types\AssetFieldType.cs" />
     <Compile Include="Field\Types\AssetStorageProviderFieldType.cs" />
+    <Compile Include="Jobs\SendVolunteerScheduleReminder.cs" />
     <Compile Include="Model\CodeGenerated\GroupMemberAssignmentService.cs" />
     <Compile Include="Model\CodeGenerated\GroupMemberScheduleTemplateService.cs" />
     <Compile Include="Model\CodeGenerated\CommunicationResponseService.cs" />
