--- a/Rock.Migrations/Rock.Migrations.csproj
+++ b/Rock.Migrations/Rock.Migrations.csproj
@@ -300,6 +300,10 @@
     <Compile Include="Migrations\201904291735560_AttendanceLabelData.Designer.cs">
       <DependentUpon>201904291735560_AttendanceLabelData.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201904292025318_GroupScheduling.cs" />
+    <Compile Include="Migrations\201904292025318_GroupScheduling.Designer.cs">
+      <DependentUpon>201904292025318_GroupScheduling.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\CreateDatabase\201311251734059_CreateDatabase.cs" />
     <Compile Include="Migrations\CreateDatabase\201311251734059_CreateDatabase.Designer.cs">
       <DependentUpon>201311251734059_CreateDatabase.cs</DependentUpon>
@@ -766,6 +770,9 @@
     <EmbeddedResource Include="Migrations\201904291735560_AttendanceLabelData.resx">
       <DependentUpon>201904291735560_AttendanceLabelData.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201904292025318_GroupScheduling.resx">
+      <DependentUpon>201904292025318_GroupScheduling.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Migrations\CreateDatabase\201311251734059_CreateDatabase.resx">
       <DependentUpon>201311251734059_CreateDatabase.cs</DependentUpon>
     </EmbeddedResource>
@@ -1034,6 +1041,9 @@
     </Content>
     <Content Include="Migrations\201904231856504_Rollup_0423_CreatePost90DataMigrationServiceJob.sql">
       <DependentUpon>201904231856504_Rollup_0423.cs</DependentUpon>
+    </Content>
+    <Content Include="Migrations\201904292025318_GroupScheduling_PopulateScheduleTemplates.sql">
+      <DependentUpon>201904292025318_GroupScheduling.cs</DependentUpon>
     </Content>
     <Content Include="Migrations\CreateDatabase\201311251734059_CreateDatabase.sql">
       <DependentUpon>201311251734059_CreateDatabase.cs</DependentUpon>
