- started on NMIHostedGateway

--- a/Rock.NMI/Rock.NMI.csproj
+++ b/Rock.NMI/Rock.NMI.csproj
@@ -37,6 +37,7 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -49,6 +50,8 @@
       <Link>AssemblySharedInfo.cs</Link>
     </Compile>
     <Compile Include="Gateway.cs" />
+    <Compile Include="NMIHostedGateway.cs" />
+    <Compile Include="NMITypes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
